[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/awesome_splash/text_node/AweListTextNode.gd" type="Script" id=1]
[ext_resource path="res://addons/awesome_splash/text_node/AweTextNode.gd" type="Script" id=2]
[ext_resource path="res://addons/awesome_splash/assets/font/RobotoCondensed-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/awesome_splash/assets/font/LilitaOne-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/temporary_code/splash_screen/splash_screen.gd" type="Script" id=5]
[ext_resource path="res://addons/awesome_splash/core/AspectNode.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/temporary_code/splash_screen/logo.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 230
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 3 )

[node name="AweSplashScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="AspectNode" parent="." instance=ExtResource( 6 )]

[node name="OutlineFrame" parent="AspectNode" index="0"]
margin_right = 1400.0
margin_bottom = 1400.0

[node name="TitleNode" type="Node2D" parent="AspectNode"]
script = ExtResource( 1 )
font = SubResource( 1 )
anchor = Vector2( 0.5, 0.5 )
char_anchor = Vector2( 0.5, 0.5 )

[node name="InfoNode" type="Node2D" parent="AspectNode"]
script = ExtResource( 2 )
anchor = Vector2( 0.5, 0.5 )
font = SubResource( 2 )

[node name="LogoContainer" type="Node2D" parent="AspectNode"]

[node name="Logo" type="TextureRect" parent="AspectNode/LogoContainer"]
margin_left = -300.0
margin_top = -560.0
margin_right = 300.0
margin_bottom = 40.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="AspectNode"]
